samples/_failures_safe/1761798291_cbaa1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43161c4a.c: In function ‘main’:
./samples/SAFE/__tmp_43161c4a.c:140:9: error: expected expression at end of input
  140 |         display_recent_logs(&log_heap,
      |         ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_43161c4a.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43161c4a.c:140:9: error: expected declaration or statement at end of input
